--- a/Tensorflow Intro ( Recognizing hand signs for numbers).ipynb
+++ b/Tensorflow Intro ( Recognizing hand signs for numbers).ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\YsfEss\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
       "9\n"
      ]
     }
@@ -104,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -175,10 +172,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x20ef4534f98>"
+       "<matplotlib.image.AxesImage at 0x20e956f3e48>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -203,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +398,7 @@
        "[5 rows x 12289 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +648,7 @@
        "[5 rows x 12289 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,8 +702,8 @@
     "                'b1':b1,\n",
     "                'W2':W2,\n",
     "                'b2':b2,\n",
-    "                'W3':W2,\n",
-    "                'b3':b2}\n",
+    "                'W3':W3,\n",
+    "                'b3':b3}\n",
     "    return(parameters)"
    ]
   },
@@ -719,22 +716,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.reset_default_graph() #Reinitialize the computation graph.\n",
-    "with tf.Session() as sess:\n",
-    "    parameters = initialize_parameters()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def forward_prop(parameters):\n",
+    "def forward_prop(X,parameters):\n",
     "    \n",
     "    # Retrieve the parameters from the dictionary \"parameters\" \n",
     "    W1 = parameters['W1']\n",
@@ -745,10 +731,10 @@
     "    b3 = parameters['b3']\n",
     "    \n",
     "\n",
-    "    Z1 = tf.add(tf.matmul(W1,X),b1)                                           \n",
-    "    A1 = tf.nn.relu(Z1)                                              \n",
-    "    Z2 = tf.add(tf.matmul(W2,A1),b2)                                              \n",
-    "    A2 = tf.nn.relu(Z2)                                              \n",
+    "    Z1 = tf.add(tf.matmul(W1,X),b1) \n",
+    "    A1 = tf.nn.relu(Z1) \n",
+    "    Z2 = tf.add(tf.matmul(W2,A1),b2)\n",
+    "    A2 = tf.nn.relu(Z2) \n",
     "    Z3 = tf.add(tf.matmul(W3,A2),b3)                                               \n",
     "    \n",
     "    return Z3"
@@ -763,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,27 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 0, 5, 7, 6, 4, 3, 1, 9, 8]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(np.random.permutation(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,15 +782,15 @@
     "\n",
     "    # Step 2: Partition (shuffled_X, shuffled_Y)\n",
     "    num_minibatches = math.floor(m/mini_batch_size) # Returns larger integer that is inferior or equal to m/mini_batch_size.\n",
-    "    for k in range(0, num_complete_minibatches):\n",
+    "    for k in range(0, num_minibatches):\n",
     "        mini_batch_X = shuffled_X[:, k * mini_batch_size : (k+1) * mini_batch_size]\n",
     "        mini_batch_Y = shuffled_Y[:, k * mini_batch_size : (k+1) * mini_batch_size]\n",
     "        mini_batch = (mini_batch_X, mini_batch_Y)\n",
     "        mini_batches.append(mini_batch)\n",
     "    \n",
     "    if m % mini_batch_size != 0:\n",
-    "        mini_batch_X = shuffled_X[:, num_complete_minibatches * mini_batch_size : m]\n",
-    "        mini_batch_Y = shuffled_Y[:, num_complete_minibatches * mini_batch_size : m]\n",
+    "        mini_batch_X = shuffled_X[:, num_minibatches * mini_batch_size : m]\n",
+    "        mini_batch_Y = shuffled_Y[:, num_minibatches * mini_batch_size : m]\n",
     "        mini_batch = (mini_batch_X, mini_batch_Y)\n",
     "        mini_batches.append(mini_batch)\n",
     "    \n",
@@ -840,27 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 3, 4, 5])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.squeeze([1,2,3,4,5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,13 +819,13 @@
     "    costs = []                                        # To keep track of the cost\n",
     "    \n",
     "    # Create Placeholders of shape (n_x,None and n_y,None) None means any size this usefull since we want to use mini-batch optimization.\n",
-    "    X, Y = create_placeholders(n_x,n_y)\n",
+    "    X, Y = createPlaceholder(n_x,n_y)\n",
     "\n",
     "    # Parameters initialization\n",
-    "    parameters = initialize_parameters()\n",
+    "    parameters = intializePar()\n",
     "    \n",
     "    # Forward propagation: Build the forward propagation in the tensorflow graph\n",
-    "    Z3 = forward_propagation(X,parameters)\n",
+    "    Z3 = forward_prop(X,parameters)\n",
     "    \n",
     "    cost = compute_cost(Z3,Y)\n",
     "    \n",
@@ -917,8 +863,9 @@
     "\n",
     "            # Print the cost every 100 epoch\n",
     "            if epoch % 100 == 0:\n",
-    "                costs.append(epoch_cost)\n",
     "                print (\"Cost after epoch %i: %f\" % (epoch, epoch_cost))\n",
+    "            if epoch % 5==0:\n",
+    "                costs.append(cost)\n",
     "                \n",
     "                \n",
     "        # plot the cost\n",
@@ -942,65 +889,53 @@
     "        print (\"Test Accuracy:\", accuracy.eval({X: X_test, Y: Y_test}))  # Calling this method eval will execute all preceding operations \n",
     "                                                                        #that produce the inputs needed for the operation that\n",
     "                                                                        #produces this tensor.\n",
-    "                                                                        # The feed must not be a Tf tensor instead a numpy array.\n",
+    "                                                                        #Caution: The feed must not be a Tf tensor instead a numpy array.\n",
     "        \n",
     "        return parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train=TrData.loc[:, TrData.columns != 'CLASS'].T.to_numpy()\n",
+    "Y_train=TrData.loc[:, TrData.columns=='CLASS'].T.to_numpy()\n",
+    "X_test=teData.loc[:, teData.columns != 'CLASS'].T.to_numpy()\n",
+    "Y_test=teData.loc[:, teData.columns=='CLASS'].T.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6666667\n"
+      "Cost after epoch 0: 162.875185\n",
+      "Cost after epoch 100: 440330.103220\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-144-aa22b73f05b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mparameters\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-142-486362dd0b15>\u001b[0m in \u001b[0;36mmodel\u001b[1;34m(X_train, Y_train, X_test, Y_test, learning_rate, num_epochs, minibatch_size)\u001b[0m\n\u001b[0;32m     36\u001b[0m             \u001b[0mepoch_cost\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.\u001b[0m                       \u001b[1;31m# Defines a cost related to an epoch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m             \u001b[0mnum_minibatches\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mminibatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m             \u001b[0mminibatches\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom_mini_batches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminibatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mminibatch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mminibatches\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-136-94ed478ddbc5>\u001b[0m in \u001b[0;36mrandom_mini_batches\u001b[1;34m(X, Y, mini_batch_size)\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;31m# Step 1: Shuffle (X, Y)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mpermutation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpermutation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0mshuffled_X\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpermutation\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[0mshuffled_Y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpermutation\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "z3=tf.Variable([[1,0,0],[0,0,1],[0,1,0]])\n",
-    "y=tf.Variable([[1,0,0],[1,0,0],[0,0,1]])\n",
-    "z=[[0,0,1],[1,0,0],[1,0,0]]\n",
-    "x=[[0,0,1],[1,0,0],[0,1,0]]\n",
-    "init=tf.global_variables_initializer()\n",
-    "\n",
-    "with tf.Session() as s:\n",
-    "    s.run(init)\n",
-    "    co=tf.equal(tf.argmax(z3),tf.argmax(y))\n",
-    "    accuracy = tf.reduce_mean(tf.cast(co, \"float\"))\n",
-    "    do=accuracy.eval({z3:z,y:x})\n",
-    "    print(do)"
+    "parameters = model(X_train, Y_train, X_test, Y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([Dimension(3), Dimension(3)])"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z3.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
